--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,6 @@
 Flask
 gunicorn
-h5py
-Jinja2
 Keras
 numpy
 opencv-python
-pandas
-Pillow
-request
-scipy
-tensorboard
-tensorflow
-tqdm
-urllib3
-utils
+matplotlib
