--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-Flask~=2.2.3
-gunicorn
-Keras~=2.14.0
-numpy~=1.25.2
-opencv-python~=4.8.1.78
-matplotlib~=3.7.2
-tensorflow
-
-pandas~=2.1.1
+Flask
+Keras
+numpy
+opencv-python
+matplotlib
+pandas
